// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<Anchor /> > should match snapshot with label, icon and to props 1`] = `
<div
  class="theme_OD_Base__j49br80"
  data-od-component="provider"
>
  <a
    class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_a__18vhvli17 elementReset__18vhvli3 focusOutline_focusOutlineStyle__tq83zq0 sprinkles_colour_link__onxwjua8 sprinkles_display_inline-flex_mobile__onxwjuft focusOutline_focusOutlineStyle__tq83zq0"
    href="https://www.autoguru.com.au"
  >
    <span
      class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_span__18vhvlim  sprinkles_display_inline-flex_mobile__onxwjuft sprinkles_colour_link__onxwjua8 sprinkles_fontSize_4_mobile__onxwjuit sprinkles_fontWeight_bold__onxwjue6 sprinkles_alignItems_center_mobile__onxwjuvd sprinkles_gap_2_mobile__onxwjuqt"
    >
      <span
        class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_span__18vhvlim  sprinkles_display_block_mobile__onxwjuex Icon_makeResponsiveStyle_key_bp__1gy3ire0"
        data-od-component="icon"
      >
        <svg
          aria-hidden="true"
          class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_display_block_mobile__onxwjuex sprinkles_width_full_mobile__onxwjupp sprinkles_height_full_mobile__onxwjuo5"
          viewBox="0 0 512 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M183.253 353.707L280.96 256l-97.707-97.92 30.08-30.08 128 128-128 128-30.08-30.293z"
          />
        </svg>
      </span>
      <span>
        Hello World!
      </span>
    </span>
  </a>
</div>
`;

exports[`<Anchor /> > should match snapshot without label 1`] = `
<div
  class="theme_OD_Base__j49br80"
  data-od-component="provider"
>
  <a
    class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_a__18vhvli17 elementReset__18vhvli3 focusOutline_focusOutlineStyle__tq83zq0 sprinkles_colour_link__onxwjua8 sprinkles_display_inline-flex_mobile__onxwjuft focusOutline_focusOutlineStyle__tq83zq0"
  >
    <span
      class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_span__18vhvlim  sprinkles_display_inline-flex_mobile__onxwjuft sprinkles_colour_link__onxwjua8 sprinkles_fontSize_4_mobile__onxwjuit sprinkles_fontWeight_bold__onxwjue6 sprinkles_alignItems_center_mobile__onxwjuvd sprinkles_gap_2_mobile__onxwjuqt"
    >
      <span />
    </span>
  </a>
</div>
`;

exports[`<Anchor /> > when custom component > should match snapshot with label, icon custom component 1`] = `
<div
  class="theme_OD_Base__j49br80"
  data-od-component="provider"
>
  <button
    class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_button__18vhvli12 elementReset_trimmedElement__18vhvli0 elementReset_button__18vhvli5 Button_button__p2yon56 Button__p2yon53 sprinkles_borderBottomStyle_none__onxwju86 sprinkles_borderLeftStyle_none__onxwju84 sprinkles_borderRightStyle_none__onxwju88 sprinkles_borderTopStyle_none__onxwju8a sprinkles_alignItems_center_mobile__onxwjuvd sprinkles_borderRadius_md_mobile__onxwjukd sprinkles_fontWeight_semiBold__onxwjue5 sprinkles_gap_1_mobile__onxwjuqp sprinkles_justifyContent_center_mobile__onxwjux1 sprinkles_position_relative_mobile__onxwjuh1 sprinkles_width_fit-content_mobile__onxwjupd focusOutline_focusOutlineStyle__tq83zq0 Button_button_size_medium__p2yon58 Button_button_shape_default__p2yon5a Button_button_intent_secondary__p2yon5f Button_button_minimal_false__p2yon5l Button_button_compound_3__p2yon5s sprinkles_colour_link__onxwjua8 sprinkles_display_inline-flex_mobile__onxwjuft focusOutline_focusOutlineStyle__tq83zq0"
    type="button"
  >
    <span
      class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_span__18vhvlim  sprinkles_display_inline-flex_mobile__onxwjuft sprinkles_colour_link__onxwjua8 sprinkles_fontSize_4_mobile__onxwjuit sprinkles_fontWeight_bold__onxwjue6 sprinkles_alignItems_center_mobile__onxwjuvd sprinkles_gap_2_mobile__onxwjuqt"
    >
      <span
        class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_span__18vhvlim  sprinkles_display_block_mobile__onxwjuex Icon_makeResponsiveStyle_key_bp__1gy3ire0"
        data-od-component="icon"
      >
        <svg
          aria-hidden="true"
          class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_display_block_mobile__onxwjuex sprinkles_width_full_mobile__onxwjupp sprinkles_height_full_mobile__onxwjuo5"
          viewBox="0 0 512 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M183.253 353.707L280.96 256l-97.707-97.92 30.08-30.08 128 128-128 128-30.08-30.293z"
          />
        </svg>
      </span>
      <span>
        Hello World!
      </span>
    </span>
  </button>
</div>
`;
